...
      ),
      drawer: getAppDrawer(),
      body:   Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            TextField(
              key: Key("search_text_field"),
              controller: Get.find<SearchNewsController>().searchTextController,
              decoration: InputDecoration(
                prefixIcon: Icon(Icons.search),
              ),
            ),
           Expanded(child: GetX<SearchNewsController>(
...
